--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap'); 
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+}
 :root{ 
     --White: hsl(0, 0%, 100%);
     --Light_gray: hsl(212, 45%, 89%);
@@ -16,8 +22,50 @@ body{
     font-family: "Outfit", sans-serif;
     font-size: 15px;
     background-color: var(--Grayish_blue);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: calc(100bh - 1px);
+    margin: 1.25rem;
 }
 
 .container{
-    
+    background-color: var(--Light_gray);
+    padding: 1.25rem;
+    border-radius: 0.625rem;
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.05);
+    margin-bottom: 1rem;
 }
+
+.container img{
+    border-radius: 0.625rem;
+    margin-bottom: 1rem;
+}
+
+.container h1{
+    color: var(--Dark_blue);
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.container p {
+    color: var(--Grayish_blue);
+    text-align: center;
+}
+
+.attribution {
+     font-size: 14px; 
+     text-align: center; 
+    }
+
+.attribution a {
+     color: hsl(228, 45%, 44%); 
+    }
+
+
+    @media (min-width: 500px) {
+        .container{
+            width: 400px;
+        }
+    }
